[package]
name = "reify2"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "examples",
]

[workspace.dependencies]
ash = "0.38.0"
bytemuck = { version = "1.16.0" }
gpu-allocator = "0.26.0"
naga = { version = "0.20.0" }
raw-window-handle = "0.6.2"
reify2 = { path = "." }
tracing = "0.1.40"
tracing-log = "0.2.0"

[dependencies]
ash = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
gpu-allocator = { workspace = true }
naga = { workspace = true, features = ["glsl-in", "spv-out", "spv-in"] }
raw-window-handle = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
