[package]
name = "reify"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["examples"]

[workspace.dependencies]
ash = "0.38.0"
bitflags = "2.9.0"
bytemuck = { version = "1.16.0" }
log = "0.4.27"
naga = { version = "0.20.0" }
raw-window-handle = "0.6.2"
reify = { path = "." }
tracing = "0.1.40"
tracing-log = "0.2.0"
vk-mem = "0.4.0"

[dependencies]
ash = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
log = { workspace = true }
naga = { workspace = true, features = ["glsl-in", "spv-out", "spv-in"] }
raw-window-handle = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
vk-mem = { workspace = true }
