[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
gpu-allocator = { workspace = true }
log = { workspace = true }
naga = { workspace = true, features = ["glsl-in", "spv-out", "spv-in"] }
pretty_env_logger = "0.5.0"
reify = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.18"
tracing-tracy = "0.11.0"
winit = "0.30.0"
